# multi-desk-trading

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
attribution/: __init__.py  lodo.py  shapley.py
bus/: __init__.py  bus.py
config/: data_sources.yaml  release_calendar.yaml
contracts/: __init__.py  target_variables.py  v1.py
controller/: __init__.py  cold_start.py  decision.py
desks/: __init__.py  base.py
desks/common/: __init__.py  ridge.py
desks/dealer_inventory/: __init__.py  classical.py  desk.py  spec.md
desks/demand/: __init__.py  classical.py  desk.py  spec.md
desks/earnings_calendar/: __init__.py  classical.py  desk.py  spec.md
desks/geopolitics/: __init__.py  classical.py  desk.py  spec.md
desks/hedging_demand/: __init__.py  classical.py  desk.py  spec.md
desks/macro/: __init__.py  classical.py  desk.py  spec.md
desks/oil_demand_nowcast/: __init__.py  classical.py  desk.py  spec.md
desks/regime_classifier/: __init__.py  classical.py  desk.py  spec.md
desks/storage_curve/: __init__.py  classical.py  desk.py  spec.md
desks/supply/: __init__.py  classical.py  desk.py  spec.md
desks/supply_disruption_news/: __init__.py  classical.py  desk.py  spec.md
desks/surface_positioning_feedback/: __init__.py  classical.py  desk.py  spec.md
docs/: architecture_spec_v1.md  capability_debits.md  external_redesign_briefing.md  first_principles_redesign.md  phase1_completion.md  phase2_mvp_completion.md
docs/operations/: forward_pipeline_automation.md  wpsr_1d_candidate_handoff.md  wpsr_1d_external_expert_commission.md
docs/plans/: sim_oil_v2.md  week0_scaffold.md
docs/pm/: README.md  current_status.md  earnings_calendar_engineering_commission.md  master_plan.md  oil_demand_nowcast_engineering_commission.md  problem_log.md  raid_log.md  reliability_sample_assessment_2026-04-24.md  solo_pmo.md  supply_disruption_news_engineering_commission.md  surface_positioning_feedback_engineering_commission.md
docs/reviews/: 2026-04-17-v1.0-review.md  2026-04-17-v1.2-review.md  2026-04-18-d9-closure-technical-review.md
docs/v2/: README.md  b10_phase_b_dry_run_spec.md  b6b_paper_live_spec.md  b7_replay_snapshot_spec.md  b8_runtime_restore_spec.md  b9_killctl_spec.md  data_spine_rebuild_v0.md  dependence_analysis_3d_horizon.md  governance_model.md  kill_switch_and_rollback.md  model_inventory.md  operator_runbook_public_data.md  ownership_rules.md  phase_b_closeout.md  prereg_template.yaml  promotion_lifecycle.md  public_data_ingestion_results.md  public_data_inventory.md  public_data_rights_and_limitations.md  public_feature_dictionary.md  s4_0_closeout.md  s4_0_dry_run_plan.md  s4_0_evidence_manifest.md  s4_0_execution_spec.md  s4_0_licence_clearance_checklist.md  s4_0_report_template.md  s4_0_research_findings.md  s4_0_researcher_brief.md  s4_0_run_config_template.yaml  s4_0f_free_data_rehearsal.md  s4_1_closeout.md  s4_1_synthetic_tick_book_spec.md  s4_2_mbp10_simulated_fill_results.md  s4_2_mbp10_simulated_fill_spec.md  s4_2a_synthetic_claim_diagnostics.md  s4_2b_replay_microstructure_integration.md  s4_3_wti_model_quality_diagnostic.md  s4_3a_exogenous_feature_hook.md  s4_3b_cftc_cot_feature_normalizer.md  s4_test_execution_status.md  (+3 more)
eval/: __init__.py  data.py  gates.py  hot_swap.py  runner.py
feasibility/: __init__.py  tractability.py  tractability_v1.py
feasibility/outputs/: fomc_3d_residuals.csv  gpr_shock_3d_residuals.csv  opec_ministerial_3d_residuals.csv  psm_calendar_3d_residuals.csv  steo_calendar_3d_residuals.csv  tractability_post_rebuild_20260429.json  tractability_v0.json  tractability_v1_1d_phase3_audit_wpsr_inventory.json  tractability_v1_1d_phase3_audit_wti_lag.json  tractability_v1_3d_all_calendar_families.json  tractability_v1_3d_all_families.json  tractability_v1_3d_default_baseline.json  tractability_v1_3d_horizon.json  tractability_v1_3d_phase3_audit_fomc.json  tractability_v1_3d_phase3_audit_gpr_shock.json  tractability_v1_3d_phase3_audit_opec_ministerial.json  tractability_v1_3d_phase3_audit_psm_calendar.json  tractability_v1_3d_phase3_audit_steo_calendar.json  tractability_v1_3d_phase3_audit_wpsr_inventory.json  tractability_v1_5d_with_psm.json  tractability_v1_baseline_wpsr_only.json  tractability_v1_wpsr_fomc_opec.json  tractability_v1_wpsr_plus_fomc.json  tractability_v1_wpsr_plus_fomc_plus_steo.json  wpsr_inventory_1d_residuals.csv  (+4 more)
grading/: __init__.py  match.py
persistence/: __init__.py  db.py  schema.sql
provenance/: __init__.py  hash.py
research_loop/: __init__.py  dispatcher.py  feed_latency_monitor.py  feed_reliability.py  handlers.py  kpi.py  llm_routing.py  promotion.py  remediation.py
scheduler/: __init__.py  calendar.py
scripts/: run_soak_test.py
sim/: __init__.py  latent_state.py  observations.py  regimes.py
sim_equity_vrp/: __init__.py  latent_state.py  observations.py  regimes.py
soak/: __init__.py  checkpoint.py  data_feed.py  incident.py  monitor.py  runner.py
tests/: conftest.py  test_attribution_lodo.py  test_attribution_shapley.py  test_boundary_purity.py  test_bus_validation.py  test_classical_specialists.py  test_contracts.py  test_controller_cold_start.py  test_controller_decision.py  test_controller_retire_exclusion.py  test_dealer_inventory_gates.py  test_earnings_calendar.py  test_earnings_calendar_skeleton.py  test_feed_incidents.py  test_feed_latency_monitor.py  test_feed_reliability.py  test_gates.py  test_hedging_demand_gates.py  test_hmm_classifier.py  test_horizon_matching.py  test_hot_swap_two_desk.py  test_llm_routing.py  test_logic_gate_multi_scenario.py  test_persistence.py  test_phase1_round_trips.py  test_phase1_smoke.py  test_phase2_equity_vrp_portability.py  test_phase2_portability_contract.py  test_phase_a_clean_observations.py  test_phase_b_controlled_leakage.py  test_phase_c_realistic_contamination.py  test_regime_classifier.py  test_regime_transition.py  test_remediation.py  test_replay_determinism.py  test_research_loop.py  test_research_loop_kpi.py  test_scheduler_recovery.py  test_sim_equity_vrp.py  test_sim_latent_state.py  (+10 more)
v2/: __init__.py
(+274 files in other folders)
