[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-desk-trading"
version = "0.1.0"
description = "Multi-desk, agent-led coordination architecture for systematic trading research."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Henri Rapson" }]
requires-python = ">=3.11"
dependencies = [
    # Contracts and validation
    "pydantic>=2.7",
    # Persistence
    "duckdb>=1.0",
    "pytz",  # Required by DuckDB for TIMESTAMPTZ Python bridging.
    # Statistics for gate evaluation (§7.1 Gate 2 Spearman)
    "scipy>=1.11",
    # Data
    "numpy>=1.26",
    "pandas>=2.2",
    # Configuration
    "pyyaml>=6.0",
    # Scheduler (cron parser)
    "croniter>=2.0",
    # Scheduling orchestrator (Phase 1: cron + Python; Prefect added when needed)
    # "prefect>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
research-loop = [
    # LLM tooling for the two-tier routing (spec §6.4)
    "anthropic",
    "openai",
    # Local quantised inference
    # "mlx-lm",     # Apple Silicon
    # "llama-cpp-python",
]
models = [
    # Classical specialists
    "catboost",
    "pymc>=5",
    # TSFMs (installed per-desk on demand; listed here for reference)
    # "chronos-forecasting",
    # "uni2ts",      # MOIRAI-2
    # "tabpfn",
]

[project.urls]
Homepage = "https://github.com/hrapson-spec/multi-desk-trading"
Spec = "https://github.com/hrapson-spec/multi-desk-trading/blob/main/docs/architecture_spec_v1.md"

[tool.hatch.build.targets.wheel]
packages = ["bus", "contracts", "desks", "eval", "grading", "persistence", "provenance", "scheduler"]

[tool.hatch.build.targets.wheel.force-include]
"persistence/schema.sql" = "persistence/schema.sql"
"config/release_calendar.yaml" = "config/release_calendar.yaml"
"config/data_sources.yaml" = "config/data_sources.yaml"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["contracts.*", "bus.*"]
strict = true

[[tool.mypy.overrides]]
module = ["croniter.*", "yaml.*"]
ignore_missing_imports = true

