[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-desk-trading"
version = "0.1.0"
description = "Multi-desk, agent-led coordination architecture for systematic trading research."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Henri Rapson" }]
requires-python = ">=3.11"
dependencies = [
    # Contracts and validation
    "pydantic>=2.7",
    # Persistence
    "duckdb>=1.0",
    "pyarrow>=15",  # v2 PIT-store Parquet vintage writes.
    "pytz",  # Required by DuckDB for TIMESTAMPTZ Python bridging.
    # Statistics for gate evaluation (§7.1 Gate 2 Spearman)
    "scipy>=1.11",
    # Data
    "numpy>=1.26",
    "pandas>=2.2",
    # Configuration
    "pyyaml>=6.0",
    # Scheduler (cron parser)
    "croniter>=2.0",
    # Scheduling orchestrator (Phase 1: cron + Python; Prefect added when needed)
    # "prefect>=3.0",
    "hmmlearn>=0.3.3",
    "psutil>=7.2.2",
    # HTTP client for v2 public-data ingestion (B2b)
    "httpx>=0.27",
    # XLSX reader for Baker Hughes rig count ingestion
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
research-loop = [
    # LLM tooling for the two-tier routing (spec §6.4)
    "anthropic",
    "openai",
    # Local quantised inference
    # "mlx-lm",     # Apple Silicon
    # "llama-cpp-python",
]
models = [
    # Classical specialists
    "catboost",
    "pymc>=5",
    # TSFMs (installed per-desk on demand; listed here for reference)
    # "chronos-forecasting",
    # "uni2ts",      # MOIRAI-2
    # "tabpfn",
]

[project.urls]
Homepage = "https://github.com/hrapson-spec/multi-desk-trading"
Spec = "https://github.com/hrapson-spec/multi-desk-trading/blob/main/docs/architecture_spec_v1.md"

[tool.hatch.build.targets.wheel]
packages = ["attribution", "bus", "contracts", "controller", "desks", "eval", "feasibility", "grading", "persistence", "provenance", "research_loop", "scheduler", "sim", "sim_equity_vrp", "soak", "v2"]

[tool.hatch.build.targets.wheel.force-include]
"persistence/schema.sql" = "persistence/schema.sql"
"config/release_calendar.yaml" = "config/release_calendar.yaml"
"config/data_sources.yaml" = "config/data_sources.yaml"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Statistical / ML code uses capital X for design matrix by convention;
# lowercase is unreadable in linear-algebra-heavy files.
"desks/**/classical.py" = ["N806"]
"desks/common/ridge.py" = ["N803", "N806"]
"feasibility/candidates/**/classical.py" = ["N803", "N806"]
# tractability_v1 uses Newey-West K (lag count) and bootstrap B (replications) —
# capital letters are standard statistical notation that maps directly to
# spec v1 §6 wording; lowercase k/b would obscure the §6 cross-reference.
"feasibility/tractability_v1.py" = ["N803", "N806"]
# Test names with capital K (mirroring HAC-K parameter) and class names
# (NonAdditiveFamilyError) intentionally preserve case for readability.
"tests/feasibility/**/*.py" = ["N802", "N806"]
# Shapley notation uses capital S for coalitions (set subscripts); the
# lowercase alternative obscures the matching against spec §9.2 notation.
"attribution/shapley.py" = ["N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["attribution.*", "contracts.*", "bus.*", "controller.*", "research_loop.*", "sim.*", "soak.*"]
strict = true

[[tool.mypy.overrides]]
module = ["croniter.*", "yaml.*", "psutil.*"]
ignore_missing_imports = true

